--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 .hidden {
   display: none;
@@ -31,7 +32,7 @@ header {
   visibility: visible;
 }
 .section-header {
-  width: 50%;
+  width: 80%;
   margin: 50px auto;
   text-align: center;
   flex-direction: column;
@@ -183,7 +184,7 @@ header nav .search i {
 }
 .services-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   grid-column-gap: 40px;
   grid-row-gap: 60px;
 }
@@ -260,7 +261,6 @@ header nav .search i {
   margin: 50px 0;
 }
 .shuffle ul {
-  display: flex;
   justify-content: space-evenly;
   margin: 30px 0;
   font-size: 20px;
@@ -274,7 +274,6 @@ header nav .search i {
   background-color: var(--trans-color);
 }
 .section-four .image {
-  display: flex;
   flex-wrap: wrap;
   overflow: hidden;
 }
@@ -351,7 +350,7 @@ header nav .search i {
   background-color: var(--trans-color);
   width: 100%;
   text-align: center;
-  display: flex;
+
   flex-direction: column;
   padding: 40px 20px;
   color: white;
@@ -429,7 +428,6 @@ header nav .search i {
   padding: 50px 0;
 }
 .section-sex .container {
-  display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
@@ -637,7 +635,7 @@ header nav .search i {
   margin: 20px auto;
   background-color: var(--maincolor);
   color: white;
-  padding: 15px 30px;
+  padding: 20px 30px;
   margin-bottom: 50px;
 }
 .subscribe {
@@ -661,7 +659,6 @@ header nav .search i {
   position: relative;
 }
 .subscribe .container form {
-  display: flex;
   position: relative;
   width: 500px;
   max-width: 100%;
@@ -686,6 +683,7 @@ header nav .search i {
   color: white;
   border: 1px solid white;
   border-left: none;
+  padding: 20px;
   text-transform: uppercase;
 }
 .subscribe .container form input[type="email"],
@@ -698,7 +696,6 @@ header nav .search i {
   margin-left: 50px;
 }
 .section-eight .content {
-  display: flex;
   justify-content: space-around;
   align-items: flex-start;
 }
@@ -724,10 +721,11 @@ header nav .search i {
   color: white;
   padding: 20px;
   border: none;
+  margin: auto;
   margin-left: auto;
   text-transform: uppercase;
   cursor: pointer;
-  display: flex;
+
   margin-top: 50px;
   margin-bottom: 100px;
 }
@@ -818,7 +816,6 @@ header nav .search i {
   .section-two .svr {
     text-align: center;
     align-items: center;
-    width: 300px;
     flex-direction: column;
     margin-left: 14px;
   }
@@ -834,6 +831,7 @@ header nav .search i {
   }
   .section-four .shuffle ul {
     font-size: 16px;
+    gap: 10px;
   }
   .section-four .shuffle ul li {
     padding: 12px;
@@ -843,6 +841,7 @@ header nav .search i {
     height: 100%;
     top: 0;
     font-size: 16px;
+    flex-direction: row;
   }
   .section-five .image {
     bottom: -75px;
